--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
             </div>
           </nav>
         </div>
-        <!-- <div class='add-icon' onclick='show_menu_open()'><a href='#'><ion-icon name="add-outline"></ion-icon></a></div> -->
         <div id='github-email-linkedin'>
           <div class='github-email-linkedin'><a href='https://github.com/hhamilton33' target='_blank'><ion-icon name='logo-github'></ion-icon></a></div>
           <div class='github-email-linkedin'><a href='https://www.linkedin.com/in/hanna-hamilton/' target='_blank'><ion-icon name='logo-linkedin'></ion-icon></a></div>
@@ -46,7 +45,7 @@
       </div>
       <div id='right-side'>
         <p>
-          Hi! I am an innovative and collaborative data scientist. My passion for math and lifelong learning attracted me to data science. I designed and developed this website to showcase and broaden my skill set. I am looking for a new opportunity in data science that enables me to work with a lot of other data professionals, quickly learn new skills, and continue being part of the solution to the climate crisis. It is important that I set an example for greater environmental leadership and responsibility in all facets of my life. Please contact me if you know of an opportunity that may be a good fit.
+          Hi! I am an innovative and collaborative data scientist. My passion for math and lifelong learning attracted me to data science. I designed and developed this website to showcase and broaden my skill set. I am looking for a new opportunity in data science that enables me to work with other data professionals, quickly learn new skills, and continue being part of the solution to the climate crisis. It is important that I set an example for greater environmental leadership and responsibility in all facets of my life. Please contact me if you know of an opportunity that may be a good fit.
         </p>
       </div>
     </div> 
