--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
       <div id='right-side'>
         <p>
-          Hi! I am an innovative and collaborative data scientist. My passion for math and lifelong learning attracted me to data science. I designed and developed this website to showcase and broaden my skill set. I am looking for a new opportunity in data science that enables me to work with other data professionals and quickly learn new skills. Please contact me if you know of an opportunity that may be a good fit.
+          Hi! I am an innovative and collaborative data scientist. My passion for math and lifelong learning attracted me to data science. I designed and developed this website to showcase and broaden my skill set. I am looking for a new opportunity in data science that enables me to work with other data professionals, quickly learn new skills, and continue being part of the solution to the climate crisis. It is important that I set an example for greater environmental leadership and responsibility in all facets of my life. Please contact me if you know of an opportunity that may be a good fit.
         </p>
       </div>
     </div> 
