--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
       </div>
       <div id='right-side'>
         <p>
-          Hi! I am an innovative and collaborative data scientist. My passion for math and lifelong learning attracted me to data science. I designed and developed this website to showcase and broaden my skill set. I am looking for a new opportunity in data science that enables me to work with other data professionals and quickly learn new skills. Please contact me if you know of an opportunity that may be a good fit.
+          Hi! I am a passionate, innovative, and collaborative data scientist. My passion for math and lifelong learning attracted me to data science. I designed and developed this website to showcase and broaden my skill set. I am looking for a new opportunity in data science that enables me to work with other data professionals and quickly learn new skills. Please contact me if you know of an opportunity that may be a good fit.
         </p>
       </div>
     </div> 
     <div id='bottom-part'>
       <div id='free-time'>
         <p>
-          In my free time, I enjoy reading, practicing yoga, and exploring the great outdoors.
+          In my free time, I enjoy reading, practicing yoga, exploring the great outdoors, and volunteering for Replate.
         </p>
       </div>
       <div id='footer-container'>
