--- a/network_analysis.html
+++ b/network_analysis.html
@@ -40,7 +40,7 @@
       </div>
     </header>
       <div class='project-description'>
-        <p> To inform the responses to infectious disease outbreaks at colleges and universities, I worked with ISyE professors and other graduate students at Georgia Tech to build a co-enrollment network, which represents student connectivity through courses, and investigate the impacts of various hybrid instructional mode strategies on the co-enrollment network. We developed metrics for health risk and academic burden and compared the strategies from several different perspectives. More details will be shared once this work has been published. It is currently under review. </p>
+        <p> To inform the responses to infectious disease outbreaks at colleges and universities, I worked with ISyE professors and other graduate students at Georgia Tech to build a co-enrollment network, which represents student connectivity through courses, and investigate the impacts of various hybrid instructional mode strategies on the co-enrollment network. We developed metrics for health risk and academic burden and compared the strategies from several different perspectives. Here is the link to the working paper: https://osf.io/jp6aq/ </p>
       </div>
     <!-- </div> -->
     <div class='project-photo'>
