--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
       <div id='right-side'>
         <p>
-          Hi! I am an experienced data scientist with expertise in analytics, algorithm design, data modeling, and data visualization. My passions for math and lifelong learning attracted me to data science. I designed and developed this website to showcase and broaden my skill set. I would embrace the opportunity to leverage my skills and passions to be part of the solution to the climate crisis. Please contact me if you know of an opportunity that may be a good fit.
+          Hi! I am an experienced data scientist with expertise in analytics, algorithm design, data modeling, and data visualization. My passions for math and lifelong learning attracted me to data science. I designed and developed this website to showcase and broaden my skill set. I would embrace the opportunity to leverage my skills and passions within the tech and/or climate industries. Please contact me if you know of an opportunity that may be a good fit.
         </p>
       </div>
     </div> 
