--- a/network_analysis.html
+++ b/network_analysis.html
@@ -40,7 +40,7 @@
       </div>
     </header>
       <div class='project-description'>
-        <p> To inform the responses to infectious disease outbreaks at colleges and universities, I worked with ISyE professors and other graduate students at Georgia Tech to build a co-enrollment network, which represents student connectivity through courses, and investigate the impacts of various hybrid instructional mode strategies on the co-enrollment network. We developed metrics for health risk and academic burden and compared the strategies from several different perspectives. Here is the link to the working paper: <a href='https://osf.io/jp6aq/' class='nav-link' :hover> https://osf.io/jp6aq/ </a></p>
+        <p> To inform the responses to infectious disease outbreaks at institutions of higher education, I worked with ISyE professors and other graduate students at Georgia Tech to build a co-enrollment network, which represents student connectivity through courses, and investigate the impacts of various hybrid instructional mode strategies on the co-enrollment network. To evaluate these strategies from health and academic perspectives, we developed network connectivity and in-person instruction metrics. After quantifying these metrics, we compared these strategies in terms of network connectivity, in-person instruction, by their impacts on various groups of students, and based on the trade-off between network connectivity and in-person instruction. Here is the link to the working paper: <a href='https://osf.io/jp6aq/' class='nav-link' :hover> https://osf.io/jp6aq/ </a></p>
       </div>
     <!-- </div> -->
     <div class='project-photo'>
